--- a/README.org
+++ b/README.org
@@ -28,3 +28,38 @@ With this menu, users can:
 - Navigate through menus and submenus.
 - Execute scripts represented as menu items.
 - Exit the menu.
+
+** How:
+
+- User creates a directory that contains subdirectories for submenus
+  and scripts for menu ytems.
+- User runs yadirmenu pointing this menu directory like this
+#+BEGIN_SRC sh
+yadirmenu --menu_dir "/path/to/menu/dir" --interface "Interface type"
+#+END_SRC
+Where "Interface type can be one of:
+- "MenuConsole": It uses old good plain console print/read interface.
+- "MenuConsole": It uses console "Dialog" library.
+- "MenuTk": It uses tkinter python GUI library.
+
+** How:
+
+The user creates a directory containing subdirectories for submenus
+and scripts for menu items.
+
+To run Yadirmenu, the user executes the command, specifying the menu
+directory and interface type:
+
+#+BEGIN_SRC sh
+yadirmenu --menu_dir "/path/to/menu/dir" --interface "Interface type"
+#+END_SRC
+
+
+sh
+Copy code
+yadirmenu --menu_dir "/path/to/menu/dir" --interface "Interface type"
+
+where "Interface type" can be one of:
+"MenuConsole": It uses the old, reliable plain console print/read interface.
+"MenuDialog": It utilizes the console "Dialog" library.
+"MenuTk": It employs the Tkinter Python GUI library.
